--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 MONGO_URI=your_mongodb_uri
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_email_password
+CORS_ORIGIN=your_cors_origin
 PORT=5000
